added unsupervised experiments at sd=100

--- a/automated_experiments.ipynb
+++ b/automated_experiments.ipynb
@@ -291,7 +291,7 @@
     "\n",
     "\n",
     "# ground_config_strings = [\"JSD, SD=4\"]\n",
-    "ground_config_strings = [\"CCE, SD=4\", \"JSD, SD=4\",\"CCEu, SD=4\", \"JSDu, SD=4\", \"CCE, SD=100\", \"JSD, SD=100\"]\n",
+    "ground_config_strings = [\"CCE, SD=4\", \"JSD, SD=4\",\"CCEu, SD=4\", \"JSDu, SD=4\", \"CCE, SD=100\", \"JSD, SD=100\",\"CCEu, SD=100\", \"JSDu, SD=100\"]\n",
     "\n",
     "\n",
     "for config_string in ground_config_strings:    \n",
