working on missing entry experiment

--- a/automated_experiments_gpu.ipynb
+++ b/automated_experiments_gpu.ipynb
@@ -431,10 +431,9 @@
     "                l.append(generate_samplespace(scipy.stats.gamma(k+1).pdf,4,5+k,sampling_density))\n",
     "            bn.cpt(d)[:]=l\n",
     "\n",
-    "    bn.cpt(a)[:]=[0.1,0.9]\n",
     "    return bn\n",
     "\n",
-    "def make_df(use_previous_df,bn,mu,sigma):\n",
+    "def make_df(use_previous_df,bn,mu,sigma,missing_entry,missing_entry_prob):\n",
     "    if use_previous_df:\n",
     "        original_database=pd.read_csv(\"good_db.csv\")\n",
     "    else:\n",
@@ -473,9 +472,25 @@
     "\n",
     "    hard_evidence = pd.DataFrame(input3,columns=index2)\n",
     "\n",
-    "    noise = np.random.normal(mu, sigma, hard_evidence.shape) \n",
-    "    df = hard_evidence + noise\n",
-    "    df = df.clip(lower=0)\n",
+    "    if not missing_entry:\n",
+    "        noise = np.random.normal(mu, sigma, hard_evidence.shape) \n",
+    "        df = hard_evidence + noise\n",
+    "        df = df.clip(lower=0)\n",
+    "    else:\n",
+    "        # TODO FIX\n",
+    "        df = hard_evidence + 0\n",
+    "        amount_of_variables = len(sizes_sorted)\n",
+    "        rows=len(df)\n",
+    "        total_entries=amount_of_variables*rows # amount of probability distributions in the PDB\n",
+    "        missing_entry_nrs=np.random.choice(total_entries,size=round(total_entries*missing_entry_prob),replace=False)\n",
+    "        m = missing_entry_nrs[:] # using an alias for shorter code\n",
+    "        col_index=0\n",
+    "        for attribute_nr,size in enumerate(sizes_sorted):\n",
+    "            entries_this_col = m[  (m >= rows*attribute_nr )  &   (m < rows*(attribute_nr+1))      ]\n",
+    "            rows_this_col = entries_this_col - (rows*attribute_nr)\n",
+    "            df.iloc[rows_this_col,col_index:col_index+size] = 1\n",
+    "\n",
+    "            col_index+=size\n",
     "    \n",
     "    for col in df_cols_sorted:\n",
     "        df[col] = normalize_df(df[col])\n",
