wrot ecode for missing entry experiment; still needs testing

--- a/automated_experiments_gpu.ipynb
+++ b/automated_experiments_gpu.ipynb
@@ -137,13 +137,17 @@
     "CNN_filters_default = 64\n",
     "CNN_kernel_size_default = 3\n",
     "\n",
+    "use_gaussian_noise_default=True\n",
+    "use_missing_entry_default=False\n",
+    "missing_entry_prob_default=0.01\n",
+    "\n",
     "defaults={}\n",
     "defaults['BN_size']=BN_size_default\n",
     "\n",
     "defaults['mu']=mu_default\n",
     "defaults['sigma']=sigma_default\n",
     "defaults['sampling_density']=sampling_density_default\n",
-    "\n",
+    "defaults['gaussian_noise_sigma']=gaussian_noise_sigma_default\n",
     "defaults['activation_types']=activation_types_default\n",
     "defaults['hidden_layers']=hidden_layers_default\n",
     "defaults['encoding_dim']=encoding_dim_default\n",
@@ -161,6 +165,10 @@
     "defaults['CNN_layers']=CNN_layers_default\n",
     "defaults['CNN_filters']=CNN_filters_default\n",
     "defaults['CNN_kernel_size']=CNN_kernel_size_default\n",
+    "\n",
+    "defaults['use_gaussian_noise'] = use_gaussian_noise_default\n",
+    "defaults['use_missing_entry'] = use_missing_entry_default\n",
+    "defaults['missing_entry_prob'] = missing_entry_prob_default\n",
     "\n",
     "parameters=list(defaults.keys())"
    ]
@@ -225,6 +233,14 @@
     "            new_experiment_config['VAE']=True\n",
     "        elif parameter=='input_layer_type' and x=='CNN':\n",
     "            new_experiment_config['CNN']=True\n",
+    "        elif parameter=='missing_entry':\n",
+    "            new_experiment_config['use_missing_entry']=True\n",
+    "            new_experiment_config['use_gaussian_noise']=False\n",
+    "            new_experiment_config['missing_entry_prob']=x\n",
+    "        elif parameter=='missing_entry_combined':\n",
+    "            new_experiment_config['use_missing_entry']=True\n",
+    "            new_experiment_config['use_gaussian_noise']=True\n",
+    "            new_experiment_config['missing_entry_prob']=x           \n",
     "        elif parameter=='kernel_landmarks':\n",
     "            new_experiment_config['input_layer_type']='gaussian_kernel'\n",
     "            new_experiment_config[parameter]=x\n",
@@ -331,6 +347,8 @@
     "        gen_experiment(config_string,ground_config,'sampling_density',[4,15,25,50,100,150,300])\n",
     "\n",
     "    gen_experiment(config_string,ground_config,'gaussian_noise_sigma',sigma_list)    \n",
+    "    gen_experiment(config_string,ground_config,'missing_entry',[0.001,0.005,0.01,0.05,0.1,0.5])\n",
+    "    gen_experiment(config_string,ground_config,'missing_entry_combined',[0.001,0.005,0.01,0.05,0.1,0.5])   \n",
     "\n",
     "\n",
     "\n",
@@ -433,7 +451,7 @@
     "\n",
     "    return bn\n",
     "\n",
-    "def make_df(use_previous_df,bn,mu,sigma,missing_entry,missing_entry_prob):\n",
+    "def make_df(use_previous_df,bn,mu,sigma,use_gaussian_noise,use_missing_entry,missing_entry_prob):\n",
     "    if use_previous_df:\n",
     "        original_database=pd.read_csv(\"good_db.csv\")\n",
     "    else:\n",
@@ -472,13 +490,14 @@
     "\n",
     "    hard_evidence = pd.DataFrame(input3,columns=index2)\n",
     "\n",
-    "    if not missing_entry:\n",
+    "    df = hard_evidence + 0\n",
+    "\n",
+    "    if use_gaussian_noise:\n",
     "        noise = np.random.normal(mu, sigma, hard_evidence.shape) \n",
-    "        df = hard_evidence + noise\n",
-    "        df = df.clip(lower=0)\n",
-    "    else:\n",
+    "        df = df + noise\n",
+    "        df = df.clip(lower=0,upper=1)\n",
+    "    if use_missing_entry:\n",
     "        # TODO FIX\n",
-    "        df = hard_evidence + 0\n",
     "        amount_of_variables = len(sizes_sorted)\n",
     "        rows=len(df)\n",
     "        total_entries=amount_of_variables*rows # amount of probability distributions in the PDB\n",
@@ -861,7 +880,7 @@
    "outputs": [],
    "source": [
     "#-------------\n",
-    "def run_experiment(epochs=epochs_default,use_previous_df=False,BN_size=BN_size_default,sampling_density=sampling_density_default,mu=mu_default,sigma=sigma_default,activation_types=activation_types_default,hidden_layers=hidden_layers_default,encoding_dim=encoding_dim_default,loss_function=loss_function_default,training_method=training_method_default,activity_regularizer=activity_regularizer_default,input_layer_type=input_layer_type_default,labeled_data_percentage=labeled_data_percentage_default, VAE=VAE_default,CNN=CNN_default,kernel_landmarks=kernel_landmarks_default,CNN_layers=CNN_layers_default,CNN_filters=CNN_filters_default,CNN_kernel_size=CNN_kernel_size_default,gaussian_noise_sigma=gaussian_noise_sigma_default):\n",
+    "def run_experiment(epochs=epochs_default,use_previous_df=False,BN_size=BN_size_default,sampling_density=sampling_density_default,mu=mu_default,sigma=sigma_default,activation_types=activation_types_default,hidden_layers=hidden_layers_default,encoding_dim=encoding_dim_default,loss_function=loss_function_default,training_method=training_method_default,activity_regularizer=activity_regularizer_default,input_layer_type=input_layer_type_default,labeled_data_percentage=labeled_data_percentage_default, VAE=VAE_default,CNN=CNN_default,kernel_landmarks=kernel_landmarks_default,CNN_layers=CNN_layers_default,CNN_filters=CNN_filters_default,CNN_kernel_size=CNN_kernel_size_default,gaussian_noise_sigma=gaussian_noise_sigma_default,use_gaussian_noise=use_gaussian_noise_default,use_missing_entry=use_missing_entry_default,missing_entry_prob=missing_entry_prob_default):\n",
     "\n",
     "    if TEST_RUN_EPOCHS:\n",
     "        epochs=TEST_RUN_EPOCH_NR\n",
@@ -869,8 +888,8 @@
     "    bn = make_bn(BN_size,sampling_density)\n",
     "    sigma = sigma(sampling_density)\n",
     "    gaussian_noise_sigma=gaussian_noise_sigma(sampling_density)\n",
-    "    df, hard_evidence, sizes_sorted = make_df(use_previous_df,bn,mu,sigma)\n",
-    "    df, hard_evidence, sizes_sorted = make_df(use_previous_df,bn,mu,sigma)\n",
+    "    df, hard_evidence, sizes_sorted = make_df(use_previous_df,bn,mu,sigma,use_gaussian_noise,use_missing_entry,missing_entry_prob)\n",
+    "\n",
     "\n",
     "#     print(\"FIRST LOSS \" + str(loss_function))\n",
     "    \n",
