experiments now run over whole range again

--- a/automated_experiments.ipynb
+++ b/automated_experiments.ipynb
@@ -3344,7 +3344,7 @@
     "#     lowest_results = min([len(x) for x in experiment_configs_and_results.values()] )\n",
     "#     highest_results = max([len(x) for x in experiment_configs_and_results.values()] )\n",
     "    print(\"\\n\\n----- LOWEST RESULTS: \" + str(lowest_results) + \", HIGHEST: \"+ str(highest_results) + \" ------\\n\\n\")\n",
-    "    for i in reversed(range(451,len(experiments))):\n",
+    "    for i in (range(len(experiments))):\n",
     "        experiment=experiments[i]\n",
     "        x=experiment\n",
     "        previous_runs = len(experiment_config_results[experiment['mapping']])\n",
