--- a/merge_results.ipynb
+++ b/merge_results.ipynb
@@ -67,12 +67,7 @@
     "    if suffix1 != suffix_result:\n",
     "        os.remove(\"experiment_config_results\"+suffix1+\".csv\")\n",
     "    if suffix2 != suffix_result:\n",
-    "        os.remove(\"experiment_config_results\"+suffix2+\".csv\")\n",
-    "\n",
-    "\n",
-    "def merge_all_files(suffix1,suffix2,result1):\n",
-    "    mergefiles(suffix1,suffix2,result1)\n",
-    "    mergefiles(\"2\"+suffix1,\"2\"+suffix2,\"2\"+result1)"
+    "        os.remove(\"experiment_config_results\"+suffix2+\".csv\")\n"
    ]
   },
   {
@@ -85,15 +80,8 @@
     "mergelist=[\"_desktop\",\"_gpu\",\"_laptop\"]\n",
     "\n",
     "for i in range(len(mergelist)-1):\n",
-    "    merge_all_files(mergelist[i],mergelist[i+1],mergelist[i+1])"
+    "    mergefiles(mergelist[i],mergelist[i+1],mergelist[i+1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
