--- a/merge_results.ipynb
+++ b/merge_results.ipynb
@@ -3,85 +3,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-rebate",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import dill\n",
-    "import numpy as np\n",
-    "from IPython.display import display\n",
-    "print('done')\n",
-    "import csv\n",
-    "import os\n",
-    "\n",
-    "with open(\"experiments\",\"rb\") as current_file:\n",
+    "import dill\r\n",
+    "import numpy as np\r\n",
+    "from IPython.display import display\r\n",
+    "print('done')\r\n",
+    "import csv\r\n",
+    "import os\r\n",
+    "\r\n",
+    "with open(\"experiments\",\"rb\") as current_file:\r\n",
     "    experiments = dill.load(current_file)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-white",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def load_from_csv(input_string):\n",
-    "    with open(input_string, 'r') as fp:\n",
-    "        reader = csv.reader(fp)\n",
-    "        li = list(reader)\n",
-    "    newlist = []\n",
-    "    for row in li:\n",
-    "        newrow = []\n",
-    "        for entry in row [1:]:\n",
-    "            newrow.append(float(entry))\n",
-    "        newlist.append(newrow)\n",
-    "    return newlist\n",
-    "\n",
-    "\n",
-    "def mergefiles(suffix1,suffix2,suffix_result):\n",
-    "    experiment_config_results1 = load_from_csv(\"experiment_config_results\"+suffix1+\".csv\")\n",
-    "    experiment_config_results2 = load_from_csv(\"experiment_config_results\"+suffix2+\".csv\")\n",
-    "\n",
-    "    experiment_config_results = []\n",
-    "    for i in range(len(experiment_config_results1)):\n",
-    "        exp1 = experiment_config_results1[i]\n",
-    "        exp2 = experiment_config_results2[i]\n",
-    "        experiment_config_results.append(exp1+exp2)\n",
-    "\n",
-    "    display(experiment_config_results)\n",
-    "\n",
-    "    experiment_config_strings = []\n",
-    "    experiment_config_list = []\n",
-    "    for ex in experiments:\n",
-    "        if ex['config'] not in experiment_config_list:\n",
-    "            experiment_config_list.append(ex['config'])\n",
-    "            experiment_config_strings.append(ex['full_string'])\n",
-    "\n",
-    "\n",
-    "    experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
-    "\n",
-    "    with open(\"experiment_config_results\"+suffix_result+\".csv\", \"w\", newline=\"\") as f:\n",
-    "        writer = csv.writer(f)\n",
-    "        writer.writerows(experiment_configs_csv)\n",
-    "\n",
-    "    if suffix1 != suffix_result:\n",
-    "        os.remove(\"experiment_config_results\"+suffix1+\".csv\")\n",
-    "    if suffix2 != suffix_result:\n",
-    "        os.remove(\"experiment_config_results\"+suffix2+\".csv\")\n"
-   ]
+    "def load_from_csv(input_string):\r\n",
+    "    with open(input_string, 'r') as fp:\r\n",
+    "        reader = csv.reader(fp)\r\n",
+    "        li = list(reader)\r\n",
+    "    newlist = []\r\n",
+    "    for row in li:\r\n",
+    "        newrow = []\r\n",
+    "        for entry in row [1:]:\r\n",
+    "            newrow.append(float(entry))\r\n",
+    "        newlist.append(newrow)\r\n",
+    "    return newlist\r\n",
+    "\r\n",
+    "\r\n",
+    "def mergefiles(filename,suffix1,suffix2,suffix_result):\r\n",
+    "    file1 = load_from_csv(filename+suffix1+\".csv\")\r\n",
+    "    file2 = load_from_csv(filename+suffix2+\".csv\")\r\n",
+    "\r\n",
+    "    appended_results = []\r\n",
+    "    for i in range(len(file1)):\r\n",
+    "        results1 = file1[i]\r\n",
+    "        results2 = file2[i]\r\n",
+    "        appended_results.append(results1+results2)\r\n",
+    "\r\n",
+    "    display(appended_results)\r\n",
+    "\r\n",
+    "    experiment_config_strings = []\r\n",
+    "    experiment_config_list = []\r\n",
+    "    for ex in experiments:\r\n",
+    "        if ex['config'] not in experiment_config_list:\r\n",
+    "            experiment_config_list.append(ex['config'])\r\n",
+    "            experiment_config_strings.append(ex['full_string'])\r\n",
+    "\r\n",
+    "\r\n",
+    "    appended_results_csv = [[experiment_config_strings[i]] + appended_results[i] for i in range(len(appended_results))]\r\n",
+    "\r\n",
+    "    with open(filename+suffix_result+\".csv\", \"w\", newline=\"\") as f:\r\n",
+    "        writer = csv.writer(f)\r\n",
+    "        writer.writerows(appended_results_csv)\r\n",
+    "\r\n",
+    "    if suffix1 != suffix_result:\r\n",
+    "        os.remove(filename+suffix1+\".csv\")\r\n",
+    "    if suffix2 != suffix_result:\r\n",
+    "        os.remove(filename+suffix2+\".csv\")\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-steam",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "mergelist=[\"_desktop\",\"_gpu\",\"_laptop\"]\n",
-    "\n",
-    "for i in range(len(mergelist)-1):\n",
-    "    mergefiles(mergelist[i],mergelist[i+1],mergelist[i+1])"
-   ]
+    "mergelist=[\"_desktop\",\"_gpu\",\"_laptop\"]\r\n",
+    "filenames=[\"experiment_config_JSD_before\", \"experiment_config_JSD_after\", \"experiment_config_flip_TP\", \"experiment_config_flip_TN\", \"experiment_config_flip_FP\", \"experiment_config_flip_FN\", \"experiment_config_entropy_before\", \"experiment_config_entropy_after\"]\r\n",
+    "\r\n",
+    "for filename in filenames:\r\n",
+    "    for i in range(len(mergelist)-1):\r\n",
+    "        mergefiles(filename,mergelist[i],mergelist[i+1],mergelist[i+1])"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
