ready to merge results now

--- a/merge_results.ipynb
+++ b/merge_results.ipynb
@@ -35,8 +35,8 @@
     "\r\n",
     "\r\n",
     "def mergefiles(filename,suffix1,suffix2,suffix_result):\r\n",
-    "    file1 = load_from_csv(filename+suffix1+\".csv\")\r\n",
-    "    file2 = load_from_csv(filename+suffix2+\".csv\")\r\n",
+    "    file1 = load_from_csv(\"results\"+suffix1+\"/\"+filename+\".csv\")\r\n",
+    "    file2 = load_from_csv(\"results\"+suffix2+\"/\"+filename+\".csv\")\r\n",
     "\r\n",
     "    appended_results = []\r\n",
     "    for i in range(len(file1)):\r\n",
@@ -55,15 +55,15 @@
     "\r\n",
     "\r\n",
     "    appended_results_csv = [[experiment_config_strings[i]] + appended_results[i] for i in range(len(appended_results))]\r\n",
-    "\r\n",
-    "    with open(filename+suffix_result+\".csv\", \"w\", newline=\"\") as f:\r\n",
+    "    \r\n",
+    "    with open(\"results\"+suffix_result+\"/\"+filename+\".csv\"+\".csv\", \"w\", newline=\"\") as f:\r\n",
     "        writer = csv.writer(f)\r\n",
     "        writer.writerows(appended_results_csv)\r\n",
     "\r\n",
     "    if suffix1 != suffix_result:\r\n",
-    "        os.remove(filename+suffix1+\".csv\")\r\n",
+    "        os.remove(\"results\"+suffix1+\"/\"+filename+\".csv\")\r\n",
     "    if suffix2 != suffix_result:\r\n",
-    "        os.remove(filename+suffix2+\".csv\")\r\n"
+    "        os.remove(\"results\"+suffix2+\"/\"+filename+\".csv\")\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -72,7 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "mergelist=[\"_desktop\",\"_gpu\",\"_laptop\"]\r\n",
+    "mergelist=[\"_desktop\",\"_gpu\",\"_laptop\",\"_online1\",\"_online2\"]\r\n",
     "filenames=[\"experiment_config_JSD_before\", \"experiment_config_JSD_after\", \"experiment_config_flip_TP\", \"experiment_config_flip_TN\", \"experiment_config_flip_FP\", \"experiment_config_flip_FN\", \"experiment_config_entropy_before\", \"experiment_config_entropy_after\"]\r\n",
     "\r\n",
     "for filename in filenames:\r\n",
