--- a/run_experiments.ipynb
+++ b/run_experiments.ipynb
@@ -3,15 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "from run_experiments import main\r\n",
-    "\r\n",
-    "main()"
-   ],
-   "outputs": [],
    "metadata": {
     "collapsed": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from run_experiments import main\n",
+    "\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
@@ -34,5 +34,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
